--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_bloc: ^8.1.3
   image_picker: ^1.0.7
+  dio: ^5.4.0
 
 dev_dependencies:
   flutter_test:
