--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   dio: ^5.4.0
   jwt_decoder: ^2.0.1
   shared_preferences: ^2.2.2
+  dartz: ^0.10.1
 
 dev_dependencies:
   flutter_test:
